tests/snapshots/chord-progression.md.snap
---
source: tests/examples.rs
expression: events
---
[
    MidiEvent {
        time: 0.0,
        duration: 4.0,
        channel: 1,
        note: "c3",
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 4.0,
        channel: 1,
        note: "e3",
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 4.0,
        channel: 1,
        note: "g3",
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 4.0,
        channel: 1,
        note: "b3",
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 1.3333333333333333,
        channel: 1,
        note: "c3",
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 1.3333333333333333,
        channel: 1,
        note: "e3",
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 1.3333333333333333,
        channel: 1,
        note: "g3",
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 1.3333333333333333,
        channel: 1,
        note: "b3",
        velocity: 100,
    },
    MidiEvent {
        time: 5.333333333333333,
        duration: 1.3333333333333333,
        channel: 1,
        note: "c3",
        velocity: 100,
    },
    MidiEvent {
        time: 5.333333333333333,
        duration: 1.3333333333333333,
        channel: 1,
        note: "e3",
        velocity: 100,
    },
    MidiEvent {
        time: 5.333333333333333,
        duration: 1.3333333333333333,
        channel: 1,
        note: "g3",
        velocity: 100,
    },
    MidiEvent {
        time: 5.333333333333333,
        duration: 1.3333333333333333,
        channel: 1,
        note: "b3",
        velocity: 100,
    },
    MidiEvent {
        time: 6.666666666666666,
        duration: 1.3333333333333333,
        channel: 1,
        note: "c3",
        velocity: 100,
    },
    MidiEvent {
        time: 6.666666666666666,
        duration: 1.3333333333333333,
        channel: 1,
        note: "e3",
        velocity: 100,
    },
    MidiEvent {
        time: 6.666666666666666,
        duration: 1.3333333333333333,
        channel: 1,
        note: "g3",
        velocity: 100,
    },
    MidiEvent {
        time: 6.666666666666666,
        duration: 1.3333333333333333,
        channel: 1,
        note: "b3",
        velocity: 100,
    },
    MidiEvent {
        time: 8.0,
        duration: 4.0,
        channel: 2,
        note: "g2",
        velocity: 100,
    },
    MidiEvent {
        time: 8.0,
        duration: 4.0,
        channel: 2,
        note: "b2",
        velocity: 100,
    },
    MidiEvent {
        time: 8.0,
        duration: 4.0,
        channel: 2,
        note: "d#3",
        velocity: 100,
    },
    MidiEvent {
        time: 8.0,
        duration: 4.0,
        channel: 2,
        note: "f3",
        velocity: 100,
    },
    MidiEvent {
        time: 12.0,
        duration: 1.3333333333333333,
        channel: 2,
        note: "g2",
        velocity: 100,
    },
    MidiEvent {
        time: 12.0,
        duration: 1.3333333333333333,
        channel: 2,
        note: "b2",
        velocity: 100,
    },
    MidiEvent {
        time: 12.0,
        duration: 1.3333333333333333,
        channel: 2,
        note: "d#3",
        velocity: 100,
    },
    MidiEvent {
        time: 12.0,
        duration: 1.3333333333333333,
        channel: 2,
        note: "f3",
        velocity: 100,
    },
    MidiEvent {
        time: 13.333333333333334,
        duration: 1.3333333333333333,
        channel: 2,
        note: "g2",
        velocity: 100,
    },
    MidiEvent {
        time: 13.333333333333334,
        duration: 1.3333333333333333,
        channel: 2,
        note: "b2",
        velocity: 100,
    },
    MidiEvent {
        time: 13.333333333333334,
        duration: 1.3333333333333333,
        channel: 2,
        note: "d#3",
        velocity: 100,
    },
    MidiEvent {
        time: 13.333333333333334,
        duration: 1.3333333333333333,
        channel: 2,
        note: "f3",
        velocity: 100,
    },
    MidiEvent {
        time: 14.666666666666666,
        duration: 1.3333333333333333,
        channel: 2,
        note: "g2",
        velocity: 100,
    },
    MidiEvent {
        time: 14.666666666666666,
        duration: 1.3333333333333333,
        channel: 2,
        note: "b2",
        velocity: 100,
    },
    MidiEvent {
        time: 14.666666666666666,
        duration: 1.3333333333333333,
        channel: 2,
        note: "d#3",
        velocity: 100,
    },
    MidiEvent {
        time: 14.666666666666666,
        duration: 1.3333333333333333,
        channel: 2,
        note: "f3",
        velocity: 100,
    },
]
