tests/snapshots/chords-progression.loom.snap
---
source: tests/examples.rs
expression: events
---
[
    MidiEvent {
        time: 0.0,
        duration: 4.0,
        channel: 0,
        note: 60,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 4.0,
        channel: 0,
        note: 64,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 4.0,
        channel: 0,
        note: 67,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 4.0,
        channel: 0,
        note: 71,
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 1.3333333333333333,
        channel: 0,
        note: 60,
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 1.3333333333333333,
        channel: 0,
        note: 64,
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 1.3333333333333333,
        channel: 0,
        note: 67,
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 1.3333333333333333,
        channel: 0,
        note: 71,
        velocity: 100,
    },
    MidiEvent {
        time: 5.333333333333333,
        duration: 1.3333333333333333,
        channel: 0,
        note: 60,
        velocity: 100,
    },
    MidiEvent {
        time: 5.333333333333333,
        duration: 1.3333333333333333,
        channel: 0,
        note: 64,
        velocity: 100,
    },
    MidiEvent {
        time: 5.333333333333333,
        duration: 1.3333333333333333,
        channel: 0,
        note: 67,
        velocity: 100,
    },
    MidiEvent {
        time: 5.333333333333333,
        duration: 1.3333333333333333,
        channel: 0,
        note: 71,
        velocity: 100,
    },
    MidiEvent {
        time: 6.666666666666666,
        duration: 1.3333333333333333,
        channel: 0,
        note: 60,
        velocity: 100,
    },
    MidiEvent {
        time: 6.666666666666666,
        duration: 1.3333333333333333,
        channel: 0,
        note: 64,
        velocity: 100,
    },
    MidiEvent {
        time: 6.666666666666666,
        duration: 1.3333333333333333,
        channel: 0,
        note: 67,
        velocity: 100,
    },
    MidiEvent {
        time: 6.666666666666666,
        duration: 1.3333333333333333,
        channel: 0,
        note: 71,
        velocity: 100,
    },
    MidiEvent {
        time: 8.0,
        duration: 4.0,
        channel: 1,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 8.0,
        duration: 4.0,
        channel: 1,
        note: 59,
        velocity: 100,
    },
    MidiEvent {
        time: 8.0,
        duration: 4.0,
        channel: 1,
        note: 63,
        velocity: 100,
    },
    MidiEvent {
        time: 8.0,
        duration: 4.0,
        channel: 1,
        note: 65,
        velocity: 100,
    },
    MidiEvent {
        time: 12.0,
        duration: 1.3333333333333333,
        channel: 1,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 12.0,
        duration: 1.3333333333333333,
        channel: 1,
        note: 59,
        velocity: 100,
    },
    MidiEvent {
        time: 12.0,
        duration: 1.3333333333333333,
        channel: 1,
        note: 63,
        velocity: 100,
    },
    MidiEvent {
        time: 12.0,
        duration: 1.3333333333333333,
        channel: 1,
        note: 65,
        velocity: 100,
    },
    MidiEvent {
        time: 13.333333333333334,
        duration: 1.3333333333333333,
        channel: 1,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 13.333333333333334,
        duration: 1.3333333333333333,
        channel: 1,
        note: 59,
        velocity: 100,
    },
    MidiEvent {
        time: 13.333333333333334,
        duration: 1.3333333333333333,
        channel: 1,
        note: 63,
        velocity: 100,
    },
    MidiEvent {
        time: 13.333333333333334,
        duration: 1.3333333333333333,
        channel: 1,
        note: 65,
        velocity: 100,
    },
    MidiEvent {
        time: 14.666666666666666,
        duration: 1.3333333333333333,
        channel: 1,
        note: 55,
        velocity: 100,
    },
    MidiEvent {
        time: 14.666666666666666,
        duration: 1.3333333333333333,
        channel: 1,
        note: 59,
        velocity: 100,
    },
    MidiEvent {
        time: 14.666666666666666,
        duration: 1.3333333333333333,
        channel: 1,
        note: 63,
        velocity: 100,
    },
    MidiEvent {
        time: 14.666666666666666,
        duration: 1.3333333333333333,
        channel: 1,
        note: 65,
        velocity: 100,
    },
]
