tests/snapshots/drums-basic.loom.snap
---
source: tests/examples.rs
expression: events
---
[
    MidiEvent {
        time: 0.0,
        duration: 0.5,
        channel: 9,
        note: 36,
        velocity: 100,
    },
    MidiEvent {
        time: 0.5,
        duration: 0.5,
        channel: 9,
        note: 42,
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 0.5,
        channel: 9,
        note: 36,
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 0.16666666666666666,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 1.1666666666666667,
        duration: 0.16666666666666666,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 1.3333333333333333,
        duration: 0.16666666666666666,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 1.5,
        duration: 0.5,
        channel: 9,
        note: 42,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 0.5,
        channel: 9,
        note: 36,
        velocity: 100,
    },
    MidiEvent {
        time: 2.5,
        duration: 0.5,
        channel: 9,
        note: 42,
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 0.5,
        channel: 9,
        note: 36,
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 0.5,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 3.5,
        duration: 0.5,
        channel: 9,
        note: 42,
        velocity: 100,
    },
]
