tests/snapshots/drums-complex.loom.snap
---
source: tests/examples_test.rs
expression: events
---
[
    MidiEvent {
        time: 0.0,
        duration: 1.0,
        channel: 9,
        note: 49,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 1.0,
        channel: 9,
        note: 42,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 1.0,
        channel: 9,
        note: 36,
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 1.0,
        channel: 9,
        note: 42,
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 1.0,
        channel: 9,
        note: 37,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 1.0,
        channel: 9,
        note: 42,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 1.0,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 1.0,
        channel: 9,
        note: 42,
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 1.0,
        channel: 9,
        note: 42,
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 1.0,
        channel: 9,
        note: 36,
        velocity: 100,
    },
    MidiEvent {
        time: 5.0,
        duration: 1.0,
        channel: 9,
        note: 42,
        velocity: 100,
    },
    MidiEvent {
        time: 5.0,
        duration: 1.0,
        channel: 9,
        note: 37,
        velocity: 100,
    },
    MidiEvent {
        time: 6.0,
        duration: 1.0,
        channel: 9,
        note: 42,
        velocity: 100,
    },
    MidiEvent {
        time: 6.0,
        duration: 1.0,
        channel: 9,
        note: 36,
        velocity: 100,
    },
    MidiEvent {
        time: 6.0,
        duration: 1.0,
        channel: 9,
        note: 38,
        velocity: 100,
    },
    MidiEvent {
        time: 7.0,
        duration: 1.0,
        channel: 9,
        note: 46,
        velocity: 100,
    },
    MidiEvent {
        time: 7.0,
        duration: 0.5,
        channel: 9,
        note: 45,
        velocity: 100,
    },
    MidiEvent {
        time: 7.0,
        duration: 0.5,
        channel: 9,
        note: 43,
        velocity: 100,
    },
    MidiEvent {
        time: 7.5,
        duration: 0.5,
        channel: 9,
        note: 45,
        velocity: 100,
    },
    MidiEvent {
        time: 7.5,
        duration: 0.5,
        channel: 9,
        note: 43,
        velocity: 100,
    },
]
