tests/snapshots/feature-init-events.loom.controls.snap
---
source: tests/examples_test.rs
expression: control_events
---
[
    ControlChange {
        time: 0.0,
        channel: 0,
        cc: 0,
        value: 0,
    },
    ControlChange {
        time: 0.0,
        channel: 0,
        cc: 32,
        value: 32,
    },
    ProgramChange {
        time: 0.0,
        channel: 0,
        program: 81,
    },
    ControlChange {
        time: 0.0,
        channel: 0,
        cc: 11,
        value: 100,
    },
    ControlChange {
        time: 0.0,
        channel: 1,
        cc: 7,
        value: 90,
    },
    ControlChange {
        time: 0.0,
        channel: 1,
        cc: 10,
        value: 72,
    },
    ControlChange {
        time: 0.0,
        channel: 1,
        cc: 11,
        value: 110,
    },
]
