tests/snapshots/feature-init-events.loom.snap
---
source: tests/examples_test.rs
assertion_line: 32
expression: events
---
[
    MidiEvent {
        time: 0.0,
        duration: 1.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 2.0,
        channel: 1,
        note: 60,
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 2.0,
        channel: 1,
        note: 67,
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 1.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 1.0,
        channel: 0,
        note: 72,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 2.0,
        channel: 1,
        note: 60,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 2.0,
        channel: 1,
        note: 67,
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 1.0,
        channel: 0,
        note: 76,
        velocity: 100,
    },
]
