tests/snapshots/feature-loop-basic.loom.snap
---
source: tests/examples_test.rs
expression: events
---
[
    MidiEvent {
        time: 0.0,
        duration: 1.0,
        channel: 0,
        note: 60,
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 1.0,
        channel: 0,
        note: 60,
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 1.0,
        channel: 0,
        note: 60,
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 1.0,
        channel: 0,
        note: 60,
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 1.0,
        channel: 0,
        note: 64,
        velocity: 100,
    },
    MidiEvent {
        time: 5.0,
        duration: 1.0,
        channel: 0,
        note: 64,
        velocity: 100,
    },
    MidiEvent {
        time: 6.0,
        duration: 1.0,
        channel: 0,
        note: 64,
        velocity: 100,
    },
    MidiEvent {
        time: 7.0,
        duration: 1.0,
        channel: 0,
        note: 64,
        velocity: 100,
    },
]
